--- a/publish-subscribe/package.json
+++ b/publish-subscribe/package.json
@@ -4,15 +4,16 @@
   "description": "",
   "main": "messager.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "build": "webpack"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "babel-cli": "^6.26.0"
-  },
-  "scripts": {
-    "build": "babel src -d lib"
+    "babel-cli": "^6.26.0",
+    "babel-core": "^6.26.0",
+    "babel-loader": "^7.1.2",
+    "babel-preset-env": "^1.6.0",
+    "webpack": "^3.6.0"
   }
 }
